<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">ტიკ ტაკ ტო</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="name">სახელი</string>
	<string name="userName">მომხმარებელი</string>
	<string name="password">პაროლი</string>
	<string name="login">შესვლა</string>
	<string name="register">რეგისტრაცია</string>
	<string name="startGame">თამაშის დაწყება</string>
	<string name="activeMode">აქტიური რეჟიმი</string>
	<string name="passiveMode">მოლოდინის რეჟიმი</string>
	<string name="fiveFiveGrid">5X5</string>
	<string name="threeThreeGrid">3X3</string>
	<string name="userMode">აქტიური|პასიური</string>
	<string name="accept">დათანხმება</string>
	<string name="reject">უარყოფა</string>
	<string name="invitationText3">გთავაზობს, რომ ეთამაშო 3X3 დაფაზე</string>
	<string name="invitationText5">გთავაზობს, რომ ეთამაშო 5X5 დაფაზე</string>
	<string name="emptyValidationMessage">შესაყვანი ველები არ უნდა იყოს ცარიელი</string>
	<string name="rank">რეიტინგი</string>
	<string name="opponents">ოპონენტები</string>
	<string name="history">ისტორია</string>
	<string name="draw">ფრე</string>
	<string name="youWin">შენ მოიგე! :)</string>
	<string name="youLose">შენ წააგე! :(</string>
	<string name="win">მოგება</string>
	<string name="lose">წაგება</string>
	<string name="selfUsername">ჩემი სახელი</string>
	<string name="opponentUsername">ოპონენტი</string>
	<string name="result">შედეგი</string>

	<style name="DefaultButtonText">
		<item name="android:layout_width">fill_parent</item>
		<item name="android:layout_height">wrap_content</item>
		<item name="android:textColor">#979797</item>
		<item name="android:gravity">center</item>
		<item name="android:layout_margin">3dp</item>
		<item name="android:textStyle">normal</item>
		<item name="android:textSize">20sp</item>
		<item name="android:shadowColor">#f9f9f9</item>
		<item name="android:shadowDx">1</item>
		<item name="android:shadowDy">1</item>
		<item name="android:shadowRadius">1</item>
	</style>
</resources>