<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@drawable/tic_tac_toe_background">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:padding="10dp">

		<EditText
			android:id="@+id/inUserName"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:background="@drawable/edittext_top_bg"
			android:padding="10dp"
			android:hint="@string/userName"
			android:textColorHint="#cccccc"
			android:drawableLeft="@drawable/email"/>
		<EditText
			android:id="@+id/inPass"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:background="@drawable/edittext_default_bg"
			android:layout_marginTop="-2dp"
			android:padding="10dp"
			android:hint="@string/password"
			android:textColorHint="#cccccc"
			android:password="true"
			android:drawableLeft="@drawable/password"/>
		<ToggleButton
			android:id="@+id/mode"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginTop="-2dp"
			android:padding="10dp"
			android:background="@drawable/edittext_bottom_bg"/>
		<Button
			android:id="@+id/submitSignIn"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:padding="10dp"
			android:layout_margin="4dp"
			android:text="@string/login"
			style="@style/DefaultButtonText"
			android:background="@drawable/button_default_bg"/>
	</LinearLayout>

</RelativeLayout>